Fix #429: Columns Gap and li fixed heigth in de/global-network/europe (#435)

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -148,7 +148,7 @@
 
 @media (min-width: 62rem) {
   .columns.top-down.collapse > div {
-    gap: 1rem;
+    gap: 1.5rem;
   }
 }
 
@@ -190,8 +190,9 @@
 }
 
 .columns.plain-links > div li {
-  height: 2.5rem;
   list-style: none;
+  padding-bottom: 1rem;
+  box-sizing: border-box;
 }
 
 .columns.plain-links > div a {
@@ -275,12 +276,12 @@
   .columns-container.backgroundimage {
     position: relative;
   }
-  
+
   .columns-container.backgroundimage .section-container {
     position: relative;
     z-index: 1;
   }
-  
+
   .columns-container.backgroundimage .backgroundimage {
     position: absolute;
     display: block;
@@ -290,7 +291,7 @@
     background-size: cover;
     background-position: center;
   }
-  
+
   /* Column styles - Machine parts */
   main .block.columns.machine-parts > div {
     align-items: flex-start;
